--- a/app/src/main/res/layout/activity_all_year.xml
+++ b/app/src/main/res/layout/activity_all_year.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AllYear">
+    tools:context=".activity.AllYear">
 
     <Button
         android:id="@+id/weeksAllYearButton"
@@ -13,7 +13,6 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
-        android:onClick="weeksButton"
         android:text="GO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
