--- a/app/src/main/res/layout/activity_all_year.xml
+++ b/app/src/main/res/layout/activity_all_year.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginRight="8dp"
+        android:onClick="go"
         android:text="GO"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
